# enclozure

./: .gitignore  README.md  box_sizes.py  build_all.py  enclosure.py  pyproject.toml  render_check.py  render_readme.py  render_seal.py
.github/workflows/: ci.yml  release.yml
